# potato

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: potato.md
src/: lexer.h  potatoc.cpp
